--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -11,7 +11,7 @@ bibliography: ref.bib
 link-citations: true
 ---
 
-```{r, include = FALSE}
+```{r, setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
@@ -19,8 +19,7 @@ knitr::opts_chunk$set(
   fig.dim = c(8, 6), 
   out.width = "75%"
 )
-# library("ino")
-devtools::load_all() # remove later
+library("ino")
 options("ino_verbose" = FALSE)
 set.seed(1)
 ```
@@ -41,22 +40,20 @@ However, it is generally unclear what good initial values are and how they might
 
 2. comparing different initialization strategies,
 
-3. and comparing different optimizer.
+3. and comparing different optimizers.
 
 ## Functionality of {ino}
 
 To specify an optimization problem in {ino}, we use an object-oriented framework based on the {R6} package [@Chang:2021]. The general workflow is to first create
-an object (specifying a numerical optimization problem), and then apply methods to change the attributes of that object, e.g., to optimize the function and investigate the optimization results. 
+a `Nop` object (specifying a ***n***umerical ***o***ptimization ***p***roblem), and then apply methods to change the attributes of that object, e.g., to optimize the function and investigate the optimization results:
 
-In particular, the {ino} package provides the R6 class `Nop` (an acronym for ***n***umerical ***o***ptimization ***p***roblem).
+- The starting point for working with {ino} is to initialize a `Nop` object via `object <- Nop$new()`.
 
-- The starting point for working with {ino} is to define a `Nop` object via `Nop$new()`.
-
-- Use the method `$set_optimizer()` to define one or more numerical optimizer.
+- Next, use the method `$set_optimizer()` to define one or more numerical optimizer.
 
 - Then, `$evaluate()` evaluates and `$optimize()` optimizes the objective function.
 
-- For evaluating the results, `$optima()` prints an overview of all identified optima, and the `$plot()` and `$summary()` methods summarize the optimization runs.
+- For analyzing the results, `$optima()` provides an overview of all identified optima, and the `$plot()` and `$summary()` methods summarize the optimization runs.
 
 - The methods `$standardize()` and `$reduce()` can be used to advantageously transform the optimization problem.
 
@@ -72,13 +69,13 @@ We demonstrate the basic {ino} workflow in the context of likelihood maximizatio
 
 The `faithful` data set contains information about eruption times (`eruptions`) of the Old Faithful geyser in Yellowstone National Park, Wyoming, USA.
 
-```{r}
+```{r, faithful data}
 str(faithful)
 ```
 
 The following histogram hints at two clusters with short and long eruption times, respectively:
 
-```{r, warning = FALSE}
+```{r, faithful, warning = FALSE}
 library("ggplot2")
 ggplot(faithful, aes(x = eruptions)) + 
   geom_histogram(aes(y = after_stat(density)), bins = 30) + 
@@ -98,7 +95,7 @@ The following function calculates the log-likelihood value of the two-class Gaus
 1. We restrict the standard deviations `sd` to be positive (via the exponential transformation) and `lambda` to be between 0 and 1 (via the logit transformation).
 2. The function returns the negative log-likelihood value by default (`neg = TRUE`). This is necessary because most R optimizers only minimize (e.g., `stats::nlm`), where we can use that $\arg\max_{\boldsymbol{\theta}} \ell(\boldsymbol{\theta}) = \arg\min_{\boldsymbol{\theta}} -\ell(\boldsymbol{\theta})$.
 
-```{r}
+```{r, mixture ll}
 normal_mixture_llk <- function(theta, data, neg = TRUE){
   stopifnot(length(theta) == 5)
   mu <- theta[1:2]
@@ -121,7 +118,7 @@ Solving $\boldsymbol{\theta}^* = \arg\max_{\boldsymbol{\theta}} \ell(\boldsymbol
 
 The following function implements this algorithm, which we will compare to standard numerical optimization below.
 
-```{r}
+```{r, em algorithm}
 em <- function(normal_mixture_llk, theta, epsilon = 1e-08, iterlim = 1000, data) {
   llk <- normal_mixture_llk(theta, data, neg = FALSE)
   mu <- theta[1:2]
@@ -148,13 +145,13 @@ em <- function(normal_mixture_llk, theta, epsilon = 1e-08, iterlim = 1000, data)
 
 ### Specification in {ino}
 
-The optimization problem is specified as a `Nop` object called `geyser` below, where
+The optimization problem is specified as a `Nop` object called `geyser`, where
 
 - `f` is the function to be optimized (here `normal_mixture_llk`), 
 - `npar` specifies the length of the parameter vector over which `f` is optimized (five in this case),
-- and `data` gives the observations as required by our likelihood function. 
+- and `data` gives the observation vector as required by our likelihood function. 
 
-```{r}
+```{r, initialize geyser}
 geyser <- Nop$new(
   f = normal_mixture_llk, 
   npar = 5, 
@@ -164,7 +161,7 @@ geyser <- Nop$new(
 
 Printing the object provides a specification overview:
 
-```{r}
+```{r, print geyser}
 print(geyser)
 ```
 
@@ -174,7 +171,7 @@ The next step concerns specifying the numerical optimizer via the `$set_optimize
 
 It is possible to define any numerical optimizer implemented in R through the {optimizeR} framework. Here, we select two of the most popular ones, `stats::nlm()` and `stats::optim()`:
 
-```{r}
+```{r, geyser optimizer}
 geyser$
   set_optimizer(optimizer_nlm(), label = "nlm")$
   set_optimizer(optimizer_optim(), label = "optim")
@@ -182,9 +179,9 @@ geyser$
 
 > **Remark:** The previous code chunk makes use of a technique called "method chaining" [see @Wickham:2019, ch. 14.2.1]. This means that `geyser$set_optimizer()` returns the modified `geyser` object, for which we can specify a second optimizer by calling `$set_optimizer()` again. 
 
-In addition to the numerical optimizers, we also want to apply the EM algorithm introduced above:
+We also want to apply the EM algorithm introduced above:
 
-```{r}
+```{r, set em algorithm}
 em_optimizer <- optimizeR::define_optimizer(
   optimizer = em, objective = "normal_mixture_llk",
   initial = "theta", value = "neg_llk", parameter = "estimate"
@@ -192,9 +189,9 @@ em_optimizer <- optimizeR::define_optimizer(
 geyser$set_optimizer(em_optimizer, label = "em")
 ```
 
-Finally, we recommend to test the specification:
+Finally, we can validate our specification:
 
-```{r}
+```{r, validate geyser}
 geyser$test(verbose = TRUE)
 ```
 
@@ -202,7 +199,7 @@ geyser$test(verbose = TRUE)
 
 Once the `Nop` object is specified, evaluating `normal_mixture_llk` at some value for the parameter vector `theta` is simple with the `$evaluate()` method, for example:
 
-```{r}
+```{r, example evaluation}
 geyser$evaluate(at = 1:5)
 ```
 
@@ -210,7 +207,7 @@ geyser$evaluate(at = 1:5)
 
 Optimization of `normal_mixture_llk` is possible with the `$optimize()` method, for example:
 
-```{r}
+```{r, example optimization}
 geyser$optimize(initial = "random", which_optimizer = "nlm", save_result = FALSE, return_result = TRUE)
 ```
 
@@ -220,9 +217,9 @@ The method arguments are:
 
 - `which_optimizer = "nlm"` for optimization with the above specified `stats::nlm` optimizer,
 
-- `save_result = FALSE` to not save the optimization result in the `geyser` object (see below),
+- `save_result = FALSE` to not save the optimization result inside the `geyser` object (see below),
 
-- and `return_results = TRUE` to return the optimization result.
+- and `return_results = TRUE` to directly return the optimization result instead.
 
 The return value is a `list` of:
 
@@ -238,9 +235,9 @@ The return value is a `list` of:
 
 ### Initialization effect
 
-We are interested in the effect of the starting values on the optimization, i.e., whether different initial values lead to different results. We therefore optimize the likelihood function `runs = 100` times at different random starting points and compare the identified optima:
+We are interested in the effect of the starting values on the optimization, i.e., whether different initial values lead to different results. We therefore optimize the likelihood function `runs = 100` times at different random starting points (`initial = "random"`) and compare the identified optima:
 
-```{r}
+```{r, random initialization}
 geyser$optimize(initial = "random", runs = 100, label = "random", save_results = TRUE, seed = 1)
 ```
 
@@ -252,12 +249,11 @@ Note:
 
 The `$optima()` method provides an overview of the identified optima. Here, we ignore any decimal places by setting `digits = 0` and sort by the optimum function `value`:
 
-```{r}
+```{r, show optima}
 geyser$optima(digits = 0, sort_by = "value")
 ```
 
-```{r, include = FALSE}
-### check assumptions about optimization results
+```{r, check assumptions about optimization results, include = FALSE}
 optima <- geyser$optima(digits = 0, sort_by = "value")
 stopifnot(as.numeric(as.character(optima[1, "value"])) == 276)
 most_occuring <- geyser$optima(digits = 0, sort_by = "frequency")[1:2, ]
@@ -267,24 +263,32 @@ stopifnot(most_occuring_value == c(421, 276))
 
 The 100 optimization runs with 3 optimizers using random starting values led to `r nrow(na.omit(geyser$optima(digits = 0)))` different optima (minima in this case, because we minimized `normal_mixture_llk()`), while `r geyser$optima(digits = 0)[which(is.na(geyser$optima(digits = 0)$value)), "frequency"]` optimization runs failed. We therefore can already deduce that the initial values have a huge impact on the optimization result.
 
-Looking at this overview optimizer-wise reveals that the `stats::optim` optimizer is most vulnerable to local optima:
+Looking at this overview optimizer-wise reveals that the `stats::optim` optimizer seems to be most vulnerable to local optima:
 
-```{r}
+```{r, show optima optimizer-wise}
 geyser$optima(digits = 0, sort_by = "value", which_optimizer = "nlm")
 geyser$optima(digits = 0, sort_by = "value", which_optimizer = "optim")
 geyser$optima(digits = 0, sort_by = "value", which_optimizer = "em")
 ```
 
-The two most occurring optima are 421 and 276 with total frequencies of `r geyser$optima(digits = 0)[which(as.numeric(as.character(geyser$optima(digits = 0)$value)) == 421), "frequency"]` and `r geyser$optima(digits = 0)[which(as.numeric(as.character(geyser$optima(digits = 0)$value)) == 276), "frequency"]`, respectively. The value 276 is the overall minimum (potentially the global minimum), while 421 is significantly worse. To compare the parameter vectors that led to these different values, we can use the `$which_parameter()` method. From the saved optimization runs, it extracts the parameter vector corresponding to an optimum closest to `value`:
+The two most occurring optima are 421 and 276 with total frequencies of `r geyser$optima(digits = 0)[which(as.numeric(as.character(geyser$optima(digits = 0)$value)) == 421), "frequency"]` and `r geyser$optima(digits = 0)[which(as.numeric(as.character(geyser$optima(digits = 0)$value)) == 276), "frequency"]`, respectively. The value 276 is the overall minimum (potentially the global minimum), while 421 is significantly worse. 
 
-```{r}
-(mle <- geyser$which_parameter(value = 276))
-(bad <- geyser$which_parameter(value = 421))
+To compare the parameter vectors that led to these different values, we can use the `$closest_parameter()` method. From the saved optimization runs, it extracts the parameter vector corresponding to an optimum closest to `value`. We consider only results from the `nlm` optimizer here: 
+
+```{r, closest parameters}
+(mle <- geyser$closest_parameter(value = 276, which_optimizer = "nlm"))
+geyser$evaluate(at = as.vector(mle))
+mle_run <- attr(mle, "run")
+(bad <- geyser$closest_parameter(value = 421, which_optimizer = "nlm"))
+geyser$evaluate(at = as.vector(bad))
+bad_run <- attr(bad, "run")
 ```
 
-These two parameter vectors are saved as `mle` (this shall be our maximum likelihood estimate) and `bad` (this clearly is a bad estimate). To understand the values in terms of means, standard deviations, and mixing proportion (i.e., in the form $\boldsymbol{\theta} = (\mu_1, \mu_2, \sigma_1, \sigma_2, \lambda)$), they need transformation (see above):
+These two parameter vectors are saved as `mle` (this shall be our maximum likelihood estimate) and `bad` (this clearly is a bad estimate). Two attributes show the run id and the optimizer that led to these parameters.
 
-```{r}
+To understand the values in terms of means, standard deviations, and mixing proportion (i.e., in the form $\boldsymbol{\theta} = (\mu_1, \mu_2, \sigma_1, \sigma_2, \lambda)$), they need transformation (see above):
+
+```{r, transform parameter}
 transform <- function(theta) c(theta[1:2], exp(theta[3:4]), plogis(theta[5]))
 (mle <- transform(mle))
 (bad <- transform(bad))
@@ -292,7 +296,7 @@ transform <- function(theta) c(theta[1:2], exp(theta[3:4]), plogis(theta[5]))
 
 The two estimates `mle` and `bad` for $\boldsymbol{\theta}$ correspond to the following mixture densities:
 
-```{r}
+```{r, visualize estimated mixtures}
 mixture_density <- function (data, mu, sd, lambda) {
   lambda * dnorm(data, mu[1], sd[1]) + (1 - lambda) * dnorm(data, mu[2], sd[2])
 }
@@ -311,45 +315,48 @@ ggplot(faithful, aes(x = eruptions)) +
   )
 ```
 
-It becomes very clear that the mixture defined by `mle` fits much better than `bad`, which practically estimates only a single class.
+It becomes very clear that the mixture defined by `mle` fits much better than `bad`, which practically estimates only a single class. However, the gradients at both points are close to zero, which explains why the `nlm` optimizer stops:
+
+```{r, extract gradients}
+geyser$results(which_run = c(mle_run, bad_run), which_optimizer = "nlm", which_element = "gradient")
+```
 
 ### Custom sampler for initial values
 
 Depending on the application and the magnitude of the parameters to be estimated, initial values drawn from a standard normal distribution (which is the default behavior when calling `$optimize(initial = "random")`) may not be a good guess. We can, however, easily modify the distribution that is used to draw the initial values. For example, the next code snippet uses starting values drawn from a $\mathcal{N}(\mu = 2, \sigma = 0.5)$ distribution:
 
-```{r}
+```{r, custom sampler}
 sampler <- function() stats::rnorm(5, mean = 2, sd = 0.5)
 geyser$optimize(initial = sampler, runs = 100, label = "custom_sampler")
 ```
 
-To obtain the first results of these optimization runs, we can use the `summary()` method. Note that setting `which_runs = "custom_sampler"` allows filtering, which is the benefit of setting a `label` when calling `$optimize()`.
+To obtain the first results of these optimization runs, we can use the `summary()` method. Note that setting `which_run = "custom_sampler"` allows filtering, which is the benefit of setting a `label` when calling `$optimize()`.
 
-```{r}
-summary(geyser, which_runs = "custom_sampler", digits = 2) |>
+```{r, summary of custom sampler results}
+summary(geyser, which_run = "custom_sampler", digits = 2) |>
   head(n = 10)
 ```
 
-```{r, include = FALSE}
-### check assumptions about optimization results
-noptima_new <- nrow(geyser$optima(digits = 0, sort_by = "value", which_runs = "custom_sampler"))
-noptima_old <- nrow(geyser$optima(digits = 0, sort_by = "value", which_runs = "random"))
+```{r, check assumptions about optimization results 2, include = FALSE}
+noptima_new <- nrow(geyser$optima(digits = 0, sort_by = "value", which_run = "custom_sampler"))
+noptima_old <- nrow(geyser$optima(digits = 0, sort_by = "value", which_run = "random"))
 stopifnot(noptima_new > noptima_old)
-most_occuring <- geyser$optima(digits = 0, sort_by = "frequency", which_runs = "custom_sampler")[1, ]
+most_occuring <- geyser$optima(digits = 0, sort_by = "frequency", which_run = "custom_sampler")[1, ]
 most_occuring_value <- as.numeric(as.character(most_occuring$value))
 stopifnot(most_occuring_value == 276)
 ```
 
-Again we obtain different optima, even more than before. But in contrast, most of the runs here lead to the presumably global optimum of 276:
+Again we obtain different optima (even more than before). But in contrast, most of the runs here lead to the presumably global optimum of 276:
 
-```{r}
-geyser$optima(digits = 0, sort_by = "value", which_runs = "custom_sampler")
+```{r, overview optima for custom sampler}
+geyser$optima(digits = 0, sort_by = "value", which_run = "custom_sampler")
 ```
 
 ### Educated guesses
 
 Next we make "educated guesses" about starting values that are probably close to the global optimum. Based on the histogram above, the means of the two normal distributions may be somewhere around 2 and 4. We will use sets of starting values where the means are lower and larger than 2 and 4, respectively. For the variances, we set the starting values close to 1 (note that we use the log transformation here since we restrict the standard deviations to be positive by using `exp()` in the log-likelihood function). The starting value for the mixing proportion shall be around 0.5. This leads to the following 32 combinations of starting values:
 
-```{r}
+```{r, fixed starting values}
 mu_1 <- c(1.7, 2.3)
 mu_2 <- c(4.3, 3.7)
 sd_1 <- sd_2 <- c(log(0.8), log(1.2))
@@ -359,60 +366,60 @@ starting_values <- asplit(expand.grid(mu_1, mu_2, sd_1, sd_2, lambda), MARGIN = 
 
 In the `$optimize()` method, instead of `initial = "random"`, we can set `initial` to a numeric vector of length `npar`, or, for convenience, to a `list` of such vectors, like `starting_values`:
 
-```{r}
+```{r, optimization with educated guesses}
 geyser$optimize(initial = starting_values, label = "educated_guess")
 ```
 
 These "educated guesses" lead to a way more stable optimization:
 
-```{r}
-geyser$optima(digits = 0, which_runs = "educated_guess")
+```{r, overview optima for educated guesses}
+geyser$optima(digits = 0, which_run = "educated_guess")
 ```
 
 For comparison, we consider a set of implausible starting values, which leads to local optima:
 
-```{r}
+```{r, bad educated guess}
 geyser$optimize(initial = rep(0, 5), label = "bad_educated_guess")
-summary(geyser, which_runs = "bad_educated_guess") 
+summary(geyser, which_run = "bad_educated_guess") 
 ```
 
 Using the `$clear()` method, it is possible to discard these results from further comparisons:
 
-```{r}
-geyser$clear(which_runs = "bad_educated_guess")
+```{r, clear optimization results}
+geyser$clear(which_run = "bad_educated_guess")
 ```
 
 ### Standardizing the optimization problem
 
 In some situations, it is possible to consider a standardized version of the optimization problem, which could potentially improve the performance of the numerical optimizer. In our example, we can standardize the data before running the optimization via the `$standardize()` method:
 
-```{r}
+```{r, standardize data}
 geyser$standardize("data")
 str(geyser$get_argument("data"))
 ```
 
 To optimize the likelihood using the standardized data set, we again use `$optmize()`, which by default uses random starting values. Below, we will compare these results with those obtained on the original optimization problem. 
 
-```{r}
+```{r, optimization with standardized data}
 geyser$
   optimize(runs = 100, label = "data_standardized")$
   reset_argument("data")
 ```
 
-Note the usage of `$reset_argument("data")` here: to perform further optimization runs after having applied standardized initialization, we undo the standardization of the data and obtain the original data set. If we would not use `$reset_argument()`, all further optimization runs will be carried out on the standardized data set. 
+The usage of `$reset_argument("data")` is important: to perform further optimization runs after having applied standardized initialization, we undo the standardization of the data and obtain the original data set. If we would not use `$reset_argument()`, all further optimization runs will be carried out on the standardized data set. 
 
 ### Reducing the optimization problem
 
-In some situations, it is possible to first optimize a sub-problem and use those results as an initialization for the full optimization problem. For example, in the context of likelihood maximization, if the data set considered shows some complex structures or is very large, numerical optimization may become computationally costly. In such cases, it can be beneficial to initially consider a reduced data set. The `$reduce()` method transforms `"data"` by selecting a proportion of 30\% data points at random.
+In some situations, it is possible to first optimize a sub-problem and use those results as an initialization for the full optimization problem. For example, in the context of likelihood maximization, if the data set considered shows some complex structures or is very large, numerical optimization may become computationally costly. In such cases, it can be beneficial to initially consider a reduced data set. The following application of the `$reduce()` method transforms `"data"` by selecting a proportion of 30\% data points at random:
 
-```{r}
+```{r, reduce data}
 geyser$reduce(argument_name = "data", how = "random", prop = 0.3, seed = 1)
 str(geyser$get_argument("data"))
 ```
 
 Similar to the standardizing above, calling `$optimize()` now optimizes on the reduced data set:
 
-```{r}
+```{r, optimization with reduced data}
 geyser$
   optimize(runs = 100, label = "data_subset")$
   reset_argument("data")$
@@ -430,31 +437,31 @@ In addition to selecting sub samples at random (`how = "random"`), four other op
 
 See the other two vignettes for demonstrations of these options.
 
-### Evaluating the optimization runs
+### Optimization times
 
-The `$plot()` method provides an overview of the optimization times. Setting `by = "label"` allows comparison across initialization strategies, setting `relative = TRUE` plots relative differences to the median of the top boxplot:
+The `$plot()` method provides an overview of the optimization times. Setting `by = "label"` allows for comparison across initialization strategies, setting `relative = TRUE` plots relative differences to the median of the top boxplot:
 
-```{r}
+```{r, plot by label}
 geyser$plot(by = "label", relative = TRUE, log = TRUE)
 ```
 
 Setting `by = "optimizer"` allows comparison across optimizers:
 
-```{r}
+```{r, plot by optimizer}
 geyser$plot(by = "optimizer", relative = FALSE)
 ```
 
 ### The final `Nop` object
 
-```{r}
+```{r, print final geyser object}
 print(geyser)
 ```
 
 The best optimization result can be extracted via:
 
-```{r}
-print(geyser$best_value)
-print(geyser$best_parameter)
+```{r, extract best value and parameter}
+geyser$best_value()
+geyser$best_parameter()
 ```
 
 ## References
